create HTML and style for the header

--- a/rocket-planner/popup.html
+++ b/rocket-planner/popup.html
@@ -9,7 +9,9 @@
     <div class="container-fluid main">
         <div class="row">
             <div class="col greeting">
-                HELLO NILIMA
+                <h2 class="greeting__type">Good Morning,</h2>
+                <h2 class="greeting__name">Nilima</h2>
+                <img id="greeting__image" src="./images/good-morning.png">
             </div>
         </div>
         <div class="row">
