--- a/rocket-planner/popup.html
+++ b/rocket-planner/popup.html
@@ -16,7 +16,7 @@
         </div>
         <div class="row">
             <div class="col progressContainer">
-
+                <div id="container"></div>
             </div>
         </div>
         <div class="row">
@@ -44,6 +44,8 @@
     </div>
     <script src="./packages/bootstrap.min.js"></script>
     <script src="./packages/jquery-3.5.1.min.js"></script>
+    <script src="./packages/progressbar.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
