create HTML and Style for User Input

--- a/rocket-planner/popup.html
+++ b/rocket-planner/popup.html
@@ -21,13 +21,17 @@
         </div>
         <div class="row">
             <div class="col actionInput">
-
+                <h5 class="actionInput__text">TODAY'S PLAN OF ACTION</h5>
+                <div class="actionInput__inputContainer">
+                    <div class="input-group input-group-lg">
+                        <input type="text" class="form-control" placeholder="Add Action Item, press Enter">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="col actionItems">
                 <div class="actionItem__item">
-
                 </div>
                 <div class="actionItem__item">
                     
