--- a/rocket-planner/popup.html
+++ b/rocket-planner/popup.html
@@ -38,7 +38,7 @@
         </div>
         <div class="row">
             <div class="col actionItems">
-                <div class="actionItem__item">
+                <div class="actionItem__item completed">
                     <div class="actionItem__main">
                         <div class="actionItem__check">
                             <div class="actionItem__checkBox">
@@ -64,6 +64,7 @@
     <script src="./packages/jquery-3.5.1.min.js"></script>
     <script src="./packages/progressbar.js"></script>
     <script src="./packages/fontawesome.js"></script>
+    <script src="./packages/uuidv4.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
