--- a/rocket-planner/popup.html
+++ b/rocket-planner/popup.html
@@ -36,30 +36,22 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col actionItems">
-                <div class="actionItem__item completed">
-                    <div class="actionItem__main">
-                        <div class="actionItem__check">
-                            <div class="actionItem__checkBox">
-                                <i class="fas fa-check" aria-hidden="true"></i>
+            <div class="row">
+                <div class="col actionItems">
+                    <!-- <div class="actionItem__item completed">
+                        <div class="actionItem__main">
+                            <div class="actionItem__check">
+                                <div class="actionItem__checkBox">
+                                    <i class="fas fa-check" aria-hidden="true"></i>
+                                </div>
                             </div>
+                            <div class="actionItem__text">Start on Module 2</div>
+                            <div class="actionItem__delete"><i class="fas fa-times"></i></div>
                         </div>
-                    <div class="actionItem__text">Start on Module 2</div>
-                    <div class="actionItem__delete"><i class="fas fa-times"></i></div>
-                </div>
-            </div>
-                <div class="actionItem__item">
-                </div>
-                <div class="actionItem__item">
-                    
-                </div>
-                <div class="actionItem__item">
-                    
+                    </div> -->
                 </div>
             </div>
         </div>
-    </div>
     <script src="./packages/bootstrap.min.js"></script>
     <script src="./packages/jquery-3.5.1.min.js"></script>
     <script src="./packages/progressbar.js"></script>
