--- a/rocket-planner/popup.html
+++ b/rocket-planner/popup.html
@@ -29,9 +29,9 @@
                         </div>
                     </form>
                     <div class="actionInput__suggestions">
-                        <button type="button" data-text="Go to gym" class="quick-action btn btn-outline-dark btn-sm">Gym</button>
-                        <button type="button" data-text="Read this site" class="quick-action btn btn-outline-dark btn-sm">Link site for later</button>
-                        <button type="button" data-text="Meditate" class="quick-action btn btn-outline-dark btn-sm">Meditation</button>
+                        <button type="button" data-id="quick-action-1" data-text="Go to gym" class="quick-action btn btn-outline-dark btn-sm">Gym</button>
+                        <button type="button" data-id="quick-action-2" data-text="Read this site" class="quick-action btn btn-outline-dark btn-sm">Link site for later</button>
+                        <button type="button" data-id="quick-action-3" data-text="Meditate" class="quick-action btn btn-outline-dark btn-sm">Meditation</button>
                     </div>
                 </div>
             </div>
