--- a/rocket-planner/popup.html
+++ b/rocket-planner/popup.html
@@ -38,7 +38,7 @@
         </div>
             <div class="row">
                 <div class="col actionItems">
-                    <!-- <div class="actionItem__item completed">
+                    <div class="actionItem__item">
                         <div class="actionItem__main">
                             <div class="actionItem__check">
                                 <div class="actionItem__checkBox">
@@ -48,7 +48,19 @@
                             <div class="actionItem__text">Start on Module 2</div>
                             <div class="actionItem__delete"><i class="fas fa-times"></i></div>
                         </div>
-                    </div> -->
+                        <div class="actionItem__linkContainer">
+                            <a href="#">
+                                <div class="actionItem__link">
+                                    <div class="actionItem__favIcon">
+                                        <img src="https://getbootstrap.com/docs/5.3/assets/img/favicons/favicon.ico" alt="">
+                                    </div>
+                                <div class="actionInput__title">
+                                    This is the title
+                                </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>                   
                 </div>
             </div>
         </div>
