add createLinkContainer functinality

--- a/rocket-planner/popup.html
+++ b/rocket-planner/popup.html
@@ -38,7 +38,7 @@
         </div>
             <div class="row">
                 <div class="col actionItems">
-                    <div class="actionItem__item">
+                    <!-- <div class="actionItem__item">
                         <div class="actionItem__main">
                             <div class="actionItem__check">
                                 <div class="actionItem__checkBox">
@@ -60,7 +60,7 @@
                                 </div>
                             </a>
                         </div>
-                    </div>                   
+                    </div>                    -->
                 </div>
             </div>
         </div>
