--- a/rocket-planner/popup.html
+++ b/rocket-planner/popup.html
@@ -65,12 +65,12 @@
             </div>
         </div>
 <!-- Modal -->
-<div class="modal fade" id="updateNameModal" tabindex="-1" role="dialog" aria-labelledby="updateNameModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+<div class="modal fade" id="updateNameModal" tabindex="-1" aria-labelledby="updateNameModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="updateNameModalLabel">Edit your name</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <h5 class="modal-title fs-5" id="updateNameModalLabel">Edit your name</h5>
+                <button type="button" class="close" data-bs-dismiss="modal"aria-label="Close">
                 <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -78,7 +78,7 @@
             <input type="text" class="form-control" id="input__name" aria-describedby="emailHelp" placeholder="Enter name">
         </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 <button type="button" id="update-name" class="btn btn-success">Save changes</button>
             </div>
         </div>
