clean up styling

--- a/rocket-planner/popup.html
+++ b/rocket-planner/popup.html
@@ -66,7 +66,7 @@
         </div>
 <!-- Modal -->
 <div class="modal fade" id="updateNameModal" tabindex="-1" aria-labelledby="updateNameModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title fs-5" id="updateNameModalLabel">Edit your name</h5>
